src/rules/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_doubles.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 5
    column: 0
  end_location:
    row: 7
    column: 3
  fix:
    content: "'''\nthis is not a docstring\n'''"
    location:
      row: 5
      column: 0
    end_location:
      row: 7
      column: 3
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 16
    column: 4
  end_location:
    row: 18
    column: 7
  fix:
    content: "'''\n    this is not a docstring\n    '''"
    location:
      row: 16
      column: 4
    end_location:
      row: 18
      column: 7
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 21
    column: 20
  end_location:
    row: 22
    column: 37
  fix:
    content: "'''\n        definitely not a docstring'''"
    location:
      row: 21
      column: 20
    end_location:
      row: 22
      column: 37
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 30
    column: 8
  end_location:
    row: 32
    column: 11
  fix:
    content: "'''\n        this is not a docstring\n        '''"
    location:
      row: 30
      column: 8
    end_location:
      row: 32
      column: 11
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 35
    column: 12
  end_location:
    row: 37
    column: 15
  fix:
    content: "'''\n            Looks like a docstring, but in reality it isn't - only modules, classes and functions\n            '''"
    location:
      row: 35
      column: 12
    end_location:
      row: 37
      column: 15
  parent: ~

