src/rules/flake8_quotes/snapshots/ruff__flake8_quotes__tests__double_docstring_docstring_doubles_module_multiline.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 4
    column: 0
  end_location:
    row: 6
    column: 3
  fix:
    content: "'''\nthis is not a docstring\n'''"
    location:
      row: 4
      column: 0
    end_location:
      row: 6
      column: 3
  parent: ~
- kind:
    BadQuotesMultilineString: single
  location:
    row: 9
    column: 0
  end_location:
    row: 11
    column: 3
  fix:
    content: "'''\nthis is not a docstring\n'''"
    location:
      row: 9
      column: 0
    end_location:
      row: 11
      column: 3
  parent: ~

