src/rules/flake8_quotes/snapshots/ruff__flake8_quotes__tests__single_docstring_docstring_doubles_class.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: single
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 53
  fix:
    content: "''' Double quotes single line class docstring '''"
    location:
      row: 2
      column: 4
    end_location:
      row: 2
      column: 53
  parent: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 57
  fix:
    content: "''' Double quotes single line method docstring'''"
    location:
      row: 6
      column: 8
    end_location:
      row: 6
      column: 57
  parent: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 9
    column: 28
  end_location:
    row: 9
    column: 52
  fix:
    content: "''' inline docstring '''"
    location:
      row: 9
      column: 28
    end_location:
      row: 9
      column: 52
  parent: ~

