src/rules/flake8_quotes/snapshots/ruff__flake8_quotes__tests__single_docstring_docstring_doubles_module_multiline.py.snap
---
source: src/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: single
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 3
  fix:
    content: "'''\nDouble quotes multiline module docstring\n'''"
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 3
  parent: ~

